# soberfuture_platform

./: .env.example  .gitignore  AGENTS.MD  AGENTS.md  AIDatasetGuides.md  HEARTBEAT.MD  IDENTITY.MD  INSTRUCTIONS.MD  MCPGuides.md  MasterOrchestrator.md  README.md  SOUL.MD  TOOLS.MD  TaskLedger.md  USER.MD  peer-support-report.md  setup_kiro_api_key.sh
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md
SoberFuture/: .env.example  .gitignore  LongTermMemory.md  mcp-registry.json
SoberFuture/services/mcp-adr/: app.py
SoberFuture/services/mcp-aws-docs/: app.py
SoberFuture/services/mcp-browser/: app.py  (+1 more)
apps/mobile/: app.json  package.json
docs/: approval-queue.md  assumptions.md  inception-brief.md  milestones.md  progress.md  risk-register.md  task-ledger.md
docs/adr/: ADR-001-monorepo.md  ADR-002-app-stack.md  ADR-003-infra-stack.md  ADR-004-agent-architecture.md  ADR-005-data-boundaries.md
docs/api/: openapi.yaml
docs/mcp/: mcp-registry.md
infra/nginx/: soberfuture.conf
infra/scripts/: deploy-ec2.sh
infra/terraform/: main.tf  outputs.tf  variables.tf
memory/: 2026-04-15.md
services/api/: pyproject.toml  soberfuture-api.service
services/api/app/: main.py
services/api/app/routers/: auth.py  health.py  journal.py
services/mcp-gateway/: mcp-gateway.service  pyproject.toml
services/mcp-gateway/app/: config.py  main.py
services/mcp-gateway/app/routers/: health.py  journal_tools.py  mcp.py  meetings.py  resources.py
services/mcp-gateway/app/services/: tool_registry.py
(+22 files in other folders)
