[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.135.3",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "uvicorn[standard]>=0.44.0",
]
